Improve game module API